src/k8sDokercompose/webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/moto-network: "true"
        io.kompose.service: webapi
    spec:
      containers:
        - env:
            - name: ConnectionStrings__DefaultConnection
              value: Host=db;Port=5432;Database=MotoFactsDB;Username=postgres;Password=admin
          image: 008971674309.dkr.ecr.ap-southeast-1.amazonaws.com/motofacts
          name: webapi
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
