src/k8sDokercompose/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      nodePort: 30080
  selector:
    io.kompose.service: webapi
  type: NodePort
status:
  loadBalancer: {}
