src/k8sDokercompose/moto-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: moto-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/moto-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/moto-network: "true"
